[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/inventory/inventory.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/gui/inventory_menu/menu_background.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/gui/inventory_menu/item_lister.png" type="Texture" id=3]

[node name="inventory_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -260.0
margin_right = 360.0
margin_bottom = 260.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="middle_separator" type="HBoxContainer" parent="background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -170.5
margin_right = 233.0
margin_bottom = 170.5

[node name="item_lister_frame" type="TextureRect" parent="background/middle_separator"]
margin_right = 201.0
margin_bottom = 341.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="item_lister" type="VBoxContainer" parent="background/middle_separator/item_lister_frame"]
margin_left = 16.0
margin_top = 30.0
margin_right = 181.0
margin_bottom = 312.0
custom_constants/separation = 50
